fixed copy bar stuck on mobile!

--- a/src/Components/Pages/QuotesList.css
+++ b/src/Components/Pages/QuotesList.css
@@ -1,4 +1,5 @@
 .quotes-list-root {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
