--- a/src/Components/QuoteHolder.css
+++ b/src/Components/QuoteHolder.css
@@ -66,7 +66,11 @@ div.copy.hovered {
 
 @media screen and (max-width: 768px) {
     .quote-card {
-        width: 20ch;
-        font-size: 1.5em;
+        box-sizing: border-box;
+        width: 100%;
+        font-size: 1.25em;
+        line-height: 2rem;
+        padding: 1.5rem;
+        margin-left: -.5rem;
     }
 }
